solr: add G1GC and GC-logging; remove bootstrap config